# sea-orm-sqlite-integer-issue

./: .env  Cargo.toml  README.md  db.sqlite3
entity-insert/: Cargo.toml
entity-insert/src/entities/: mod.rs  number_table.rs
entity-remove/: Cargo.toml
entity-remove/src/entities/: number_table.rs  prelude.rs
entity_remove/src/entities/: number_table.rs  prelude.rs
examples/: entity_insert.rs  entity_remove.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
